created: -register -log -users page(for admin) -index page(for user)

--- a/MainServer/src/main/resources/application.properties
+++ b/MainServer/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/factorial2
+spring.datasource.username=postgres
+spring.datasource.password=12qwaszx
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+//spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+factorial.app.secret=ajsdqiwjd12hdu89212i12ia
+factorial.app.lifetime=60000
